# EduCollab.Contracts/Requests/Users/SetActiveWorkspaceRequest.cs
@@ -1,0 +1,7 @@
+namespace EduCollab.Contracts.Requests.Users
+{
+    public class SetActiveWorkspaceRequest
+    {
+        public int WorkspaceId { get; set; }
+    }
+}
