# EduCollab.Contracts/Responses/Users/UserWorkspacesResponse.cs
@@ -1,0 +1,7 @@
+namespace EduCollab.Contracts.Responses.Users
+{
+    public class UserWorkspacesResponse
+    {
+        public List<UserWorkspaceMembershipResponse> Workspaces { get; set; } = new();
+    }
+}
